--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,12 +3,13 @@
 <div class="row">
     <div class="col">
 
+      <app-dbz-list [characterList]="characters"></app-dbz-list>
       <app-dbz-list></app-dbz-list>
 
 
     </div>
 
     <div class="col">
-      <app-dbz-add-character></app-dbz-add-character>
+      <app-dbz-add-character ></app-dbz-add-character>
     </div>
 </div>
