--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,5 +1,5 @@
 <h4>Listado</h4>
-<ul class="list-group">
+<ul class="list-group ">
   <li *ngFor="
   let character of characterList;
   let i=index
@@ -8,19 +8,18 @@
   let isEven = even;
   let isOdd = odd;
   "
-  class="list-group-item"
+  class="list-group-item d-flex justify-content-between align-items-center"
   [ngClass]="{'list-group-item-dark': isLast,
               'list-group-item-primary':isEven
 }">
+  <div>
+    <span class="text-primary">{{i+1}}. </span>
+    <span>{{character.name}} - </span>
+    <strong>Saldo: </strong>
+    <span>{{character.power}}</span>
+  </div>
 
-  <span class="text-primary">{{i+1}}. </span>
-  <span>{{character.name}} - </span>
-  <strong>Saldo: </strong>
-  <span>{{character.power}}</span>
-  <span> Es el primero: {{isFirst}}</span>
-  <span> Es el ultimo: {{isLast}}</span>
-  <span> Es par? {{isEven}}</span>
-  <span> es impar ? {{isOdd}}</span>
+  <button class="btn btn-danger" (click)="onDeleteCharacter(character.id)">X</button>
     </li>
   <!-- <li class="list-group-item">Card 2 - 10,000</li> -->
 </ul>
